completed all unit-tests, added logging,уencapsulated parameters file